--- a/app/views/includes/foot.html
+++ b/app/views/includes/foot.html
@@ -1,1 +1,14 @@
-<script src="/public/angular/angular.js" type="text/javascript"></script>
+<script src="public/angular/angular.js" type="text/javascript"></script>
+<script src="public/angular-resource/angular-resource.js" type="text/javascript"></script>
+<script src="public/angular-animate/angular-animate.js" type="text/javascript"></script>
+<script src="public/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
+
+<script src="js/app.js"></script>
+
+<script src="js/system/system.js"></script>
+<script src="js/system/controllers/index.js"></script>
+
+<script src="js/toons/toons.js"></script>
+<script src="js/toons/controllers/toons.js"></script>
+<script src="js/toons/routes/toons.js"></script>
+<script src="js/toons/services/toons.js"></script>
