update head/foot to include new resources; pulling in shadowbane char data with bower

--- a/app/views/includes/foot.html
+++ b/app/views/includes/foot.html
@@ -12,3 +12,4 @@
 <script src="js/toons/controllers/toons.js"></script>
 <script src="js/toons/routes/toons.js"></script>
 <script src="js/toons/services/toons.js"></script>
+<script src="js/toons/services/shadowbane-data.js"></script>
