--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -3,4 +3,5 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Tooner</title>
   <link rel="stylesheet" href="/public/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="js/toons/assets/toons.css">
 </head>
