Updated includes and routes to reflect new directory structure

--- a/app/views/includes/foot.html
+++ b/app/views/includes/foot.html
@@ -3,13 +3,13 @@
 <script src="public/angular-animate/angular-animate.js" type="text/javascript"></script>
 <script src="public/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
 
-<script src="js/app.js"></script>
+<script src="app.js"></script>
 
-<script src="js/system/system.js"></script>
-<script src="js/system/controllers/index.js"></script>
+<script src="system/system.js"></script>
+<script src="system/controllers/index.js"></script>
 
-<script src="js/toons/toons.js"></script>
-<script src="js/toons/controllers/toons.js"></script>
-<script src="js/toons/routes/toons.js"></script>
-<script src="js/toons/services/toons.js"></script>
-<script src="js/toons/services/shadowbane-data.js"></script>
+<script src="toons/toons.js"></script>
+<script src="toons/controllers/toons.js"></script>
+<script src="toons/routes/toons.js"></script>
+<script src="toons/services/toons.js"></script>
+<script src="toons/services/shadowbane-data.js"></script>
