--- a/public/toons/views/create.html
+++ b/public/toons/views/create.html
@@ -1,91 +1,6 @@
-<section data-ng-controller="ToonsController" data-ng-init="findComponents()">
-  <!-- START Level 1 Row -->
-  <div class="row first-row" ng-show="toonLevel === 1">
-    <div class="col-md-4">
-      <ul class="list-unstyled component-list">
-        <li data-ng-repeat="race in races">
-          <div class="component-item pointer" ng-class="{active: selectedRace.name === race.name}" ng-click="chooseRace(race)">
-            {{race.name}} ({{race.cost}})
-          </div>
-        </li>
-      </ul>
-    </div>
-      
-    <div class="col-md-4" ng-show="selectedRace">
-      <ul class="list-unstyled component-list">
-        <li data-ng-repeat="class in baseClasses">
-          <div class="component-item pointer" ng-class="{active: selectedBaseClass.name === class.name, unavailable: !class.available}" ng-click="chooseBaseClass(class)">
-            {{class.name}}
-          </div>
-        </li>
-      </ul>
-    </div>
-      
-    <div class="col-md-4 overflow-col" ng-show="selectedBaseClass">
-      <ul class="list-unstyled component-list">
-        <li data-ng-repeat="trait in traits | orderBy: 'name'" tooltip-placement="left" tooltip-append-to-body="true" tooltip-html-unsafe="{{getTraitTooltip(trait)}}" ng-class="{hidden: !trait.available && hideUnavailable === true}">
-          <div class="component-item pointer" ng-class="{unavailable: !trait.available, active: trait.selected, requirement: trait.requirement, category: trait.categoryRestriction}" ng-click="selectTrait(trait)">
-            {{trait.name}} ({{trait.cost}})
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!-- END Level 1 Row -->
-
-  <!-- START Level 75 Row -->      
-  <div class="row first-row" ng-show="toonLevel === 75">
-
-    <div class="col-md-4 overflow-col">
-      <ul class="list-unstyled component-list">
-        <li data-ng-repeat="prestigeClass in prestigeClasses" ng-class="{hidden: !prestigeClass.available}">
-          <div class="component-item pointer" ng-class="{active: selectedPrestigeClass.name === prestigeClass.name, unavailable: !prestigeClass.available}" ng-click="choosePrestigeClass(prestigeClass)">
-            {{prestigeClass.name}}
-          </div>
-        </li>
-      </ul>
-    </div>
-
-    <div class="col-md-4 overflow-col" ng-show="selectedPrestigeClass">
-      <ul class="list-unstyled component-list">
-        <li data-ng-repeat="discipline in disciplines" ng-class="{hidden: !discipline.available && hideUnavailable === true}">
-          <div class="component-item pointer" ng-class="{active: discipline.selected, unavailable: !discipline.available, prohibited: discipline.prohibited}" ng-click="selectDiscipline(discipline)">
-            {{discipline.name}}
-          </div>
-        </li>
-        <li data-ng-repeat="masteryRune in masteryRunes" ng-class="{hidden: !masteryRune.available && hideUnavailable === true}">
-          <div class="component-item pointer" ng-click="selectMasteryRune(masteryRune)" ng-class="{active: masteryRune.selected, unavailable: !masteryRune.available}">
-            {{masteryRune.name}} ({{masteryRune.cost}})
-          </div>
-        </li>        
-      </ul>
-    </div>
-
-    <div class="col-md-4 overflow-col" ng-show="selectedPrestigeClass">
-      <ul class="list-unstyled component-list">
-        <li data-ng-repeat="statRune in statRunes" tooltip-placement="left" tooltip-append-to-body="true" tooltip-html-unsafe="{{getStatRuneTooltip(statRune)}}">
-          <div class="component-item pointer" ng-class="{active: statRune.selected, requirement: statRune.requirement}" ng-click="selectStatRune(statRune)">
-            {{statRune.name}} ({{statRune.cost}})
-          </div>
-        </li>
-      </ul>
-    </div>    
-
-  </div>
-  <!-- END Level 75 Row -->
-
-  <div class="row unavailable-row">
-    <div class="col-md-4 col-md-offset-8 col-xs-12">
-      <div class="checkbox unavailable-checkbox">
-        <label ng-show="selectedBaseClass && toonLevel === 1">
-          <input type="checkbox" ng-model="showCheckbox" ng-change="hideUnavailable = !showCheckbox"> Show Unavailable Traits
-        </label>
-        <label ng-show="selectedPrestigeClass && toonLevel === 75">
-          <input type="checkbox" ng-model="showCheckbox" ng-change="hideUnavailable = !showCheckbox"> Show Unavailable Runes
-        </label>        
-      </div>
-    </div>
-  </div>
+<section ng-controller="ToonsController" ng-init="init()">
+  <!-- Each step partial will be rendered here -->
+  <div ui-view></div>
 
   <div class="row">
     <div class="col-md-12 text-center">
@@ -100,7 +15,7 @@
       <h1 class="text-center">Points Remaining: {{remainingPoints}} / {{maxPoints}}</h1>
       <h2 class="text-center">{{selectedRace.name}} {{selectedBaseClass.name}} {{selectedPrestigeClass.name}}</h2>
     </div>
-  </div>  
+  </div>
 
   <div class="row">
     <div class="col-md-6">
@@ -144,16 +59,16 @@
       <div class="traits">
         <span class="selected-traits-header">Selected Runes</span>
         <ul class="list-unstyled selected-traits">
-          <li data-ng-repeat="trait in selectedTraits | orderBy: 'name'">
+          <li ng-repeat="trait in selectedTraits | orderBy: 'name'">
             {{trait.name}} ({{trait.cost}})
           </li>
-          <li data-ng-repeat="discipline in selectedDisciplines | orderBy: 'name'">
+          <li ng-repeat="discipline in selectedDisciplines | orderBy: 'name'">
             {{discipline.name}}
           </li>
-          <li data-ng-repeat="masteryRune in selectedMasteries | orderBy: 'name'">
-            {{masteryRune.name}} ({{masteryRune.cost}})
+          <li ng-repeat="mastery in selectedMasteries | orderBy: 'name'">
+            {{mastery.name}} ({{mastery.cost}})
           </li>
-          <li data-ng-repeat="statRune in selectedStatRunes | orderBy: 'name'">
+          <li ng-repeat="statRune in selectedStatRunes | orderBy: 'name'">
             {{statRune.name}} ({{statRune.cost}})
           </li>
         </ul>
@@ -166,11 +81,11 @@
       <div class="well">
         <div class="form-group">
           <label for="buildTitle">Build Title</label>
-          <input type="text" class="form-control" id="buildTitle" data-ng-model="buildTitle" placeholder="Enter build title..." required>
+          <input type="text" class="form-control" id="buildTitle" ng-model="buildTitle" placeholder="Enter build title..." required>
         </div>
         <div class="form-group">
           <label for="buildNotes">Build Notes</label>
-          <textarea class="form-control" id="buildNotes" data-ng-model="buildNotes" placeholder="Enter build notes..." rows="4"></textarea>     
+          <textarea class="form-control" id="buildNotes" ng-model="buildNotes" placeholder="Enter build notes..." rows="4"></textarea>     
         </div>
         <button type="button" class="btn btn-success" ng-click="create()">Save</button>      
       </div>
