Implemented automatic asset loading and including

--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -2,7 +2,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Tooner</title>
-  <link rel="stylesheet" href="/public/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="system/assets/common.css">
-  <link rel="stylesheet" href="toons/assets/toons.css">
+  {% for cssFile in cssFiles %}<link rel="stylesheet" href="{{cssFile}}">
+  {% endfor %}
 </head>
