--- a/app/views/includes/foot.html
+++ b/app/views/includes/foot.html
@@ -1,15 +1,2 @@
-<script src="public/angular/angular.js" type="text/javascript"></script>
-<script src="public/angular-resource/angular-resource.js" type="text/javascript"></script>
-<script src="public/angular-animate/angular-animate.js" type="text/javascript"></script>
-<script src="public/angular-ui-router/release/angular-ui-router.js" type="text/javascript"></script>
-
-<script src="app.js"></script>
-
-<script src="system/system.js"></script>
-<script src="system/controllers/index.js"></script>
-
-<script src="toons/toons.js"></script>
-<script src="toons/controllers/toons.js"></script>
-<script src="toons/routes/toons.js"></script>
-<script src="toons/services/toons.js"></script>
-<script src="toons/services/shadowbane-data.js"></script>
+{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>
+  {% endfor %} 
